Add password update endpoint, handler function and tests.
* Use secure_password format string to validate new password
